# ITSR

./: README.md  requirements.txt
IT.Haskell/: countSlices.sh  crossval.sh  cvparams.csv  experiments.sh  fonts.txt  it.cabal  it.prof  out.txt  stack.yaml  toR.txt
IT.Haskell/.stack-work/: stack.sqlite3
IT.Haskell/.stack-work/ghci/065fe199/: cabal_macros.h
IT.Haskell/.stack-work/ghci/58904693/: cabal_macros.h
IT.Haskell/.stack-work/ghci/6c6f2c32/: cabal_macros.h
IT.Haskell/configs/: aircraft.cfg  airfoil.cfg  jesus.cfg  movielens_1.cfg  movielens_10.cfg  movielens_2.cfg  movielens_3.cfg  movielens_4.cfg  movielens_5.cfg  movielens_6.cfg  movielens_7.cfg  movielens_8.cfg  movielens_9.cfg
IT.Haskell/configs/fi2pop/: F05128_dyn.cfg  F05128_stat.cfg  FlowPsi.cfg  FlowPsi_noise.cfg  FlowStress.cfg  RocketFuel.cfg  RocketFuel_noise.cfg  aircraft.cfg  aircraft_noise.cfg
IT.Haskell/configs/itea/: airfoil0.cfg  airfoil1.cfg  airfoil4.cfg  concrete1.cfg  concrete2.cfg  concrete3.cfg  energyCooling0.cfg  energyCooling1.cfg  energyCooling3.cfg  energyHeating0.cfg  energyHeating1.cfg  wineRed0.cfg
IT.Haskell/configs/paper/: airfoil2.cfg  airfoil3.cfg  concrete0.cfg  concrete4.cfg  energyCooling2.cfg  energyCooling4.cfg  energyHeating2.cfg  energyHeating3.cfg  energyHeating4.cfg  wineRed1.cfg  wineRed2.cfg  wineRed3.cfg  wineRed4.cfg
IT.Haskell/datasets/aircraft/: Aircraft_Lift_Coefficient.csv  Aircraft_Lift_Coefficient_test.csv  Aircraft_Lift_Coefficient_train.csv
IT.Haskell/results/: genResults.py  genResultsFI2POP.py  mergeCSV.py
IT.Haskell/results/F05128_dyn/: exprs.csv  stats.csv
IT.Haskell/results/F05128_stat/: exprs.csv  stats.csv
IT.Haskell/results/FlowPsi/: stats.csv
IT.Haskell/results/FlowPsi_noise/: exprs.csv  stats.csv
IT.Haskell/results/FlowStress/: exprs.csv  stats.csv
IT.Haskell/results/RocketFuel/: exprs.csv  stats.csv
IT.Haskell/results/RocketFuel_noise/: stats.csv
IT.Haskell/results/aircraft/: exprs.csv  stats.csv
IT.Haskell/results/aircraft_noise/: exprs.csv  stats.csv
IT.Haskell/results/airfoil/: stats.csv  stats2.csv  statsOld.csv
IT.Haskell/results/concrete/: stats.csv  stats2.csv  statsOld.csv
IT.Haskell/results/corona/: stats.csv
IT.Haskell/results/energyCooling/: stats.csv  statsOld.csv  statsOld2.csv
IT.Haskell/results/energyHeating/: stats.csv  statsOld.csv  statsOld03.csv
IT.Haskell/results/jesus/: stats.csv
IT.Haskell/results/movielens/: stats.csv
IT.Haskell/results/wineRed/: stats.csv
IT.Haskell/results/wineWhite/: stats.csv
IT.Haskell/results/yacht/: stats.csv  statsOld.csv
IT.Haskell/src/: CROSSVAL.hs  Enumeration.hs  IT.hs  Main.hs  MainFI2POP.hs  MainITEA.hs  ParseExprs.hs  TEST.hs
IT.Haskell/src/Example/: .Regression.hs.swp  ITEA.hs  NEWIT.hs  Regression.hs
IT.Haskell/src/FI2POP/: Config.hs  Regression.hs
IT.Haskell/src/IT/: .Affine.hs.swp  .Regression.hs.swp  Affine.hs  Algorithms.hs  Boolean.hs  Enumeration.hs  Enumeration_old.hs  FI2POP.hs  ITEA.hs  Knowledge.hs  Mutation.hs  Random.hs  Regression.hs  ghcidcmd
IT.Haskell/src/ITEA/: .Config.hs.swp  Config.hs  Regression.hs
IT.Haskell/src/R/: aircraft_lift.R  check_model_intervals_result.txt  check_model_intervals_sampling_aircraft_lift.r  check_model_intervals_sampling_all.R  hl_functions.R
(+294 files in other folders)
