name:                it
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/it#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable itea
  ghc-options:         -rtsopts -O2 -optlc-O3 -threaded -fllvm -msse4 
  hs-source-dirs:      src
  main-is:             MainITEA.hs
  other-modules:       IT, IT.Random, IT.Regression, IT.ITEA, IT.Mutation, IT.Algorithms, ITEA.Config, ITEA.Regression, IT.Knowledge, IT.Affine, IT.FI2POP, FI2POP.Config, FI2POP.Regression
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, mtl, mltool, hmatrix, containers, fingertree, monad-extras, vector, split, splitmix, parallel, deepseq, directory, clock, ConfigFile, MissingH, intervals, hafar
  
executable fi2pop
  ghc-options:         -rtsopts -O2 -optlc-O3 -threaded -fllvm -msse4 
  hs-source-dirs:      src
  main-is:             MainFI2POP.hs
  other-modules:       IT, IT.Random, IT.Regression, IT.ITEA, IT.Mutation, IT.Algorithms, ITEA.Config, ITEA.Regression, IT.Knowledge, IT.Affine, IT.FI2POP, FI2POP.Config, FI2POP.Regression
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, mtl, mltool, hmatrix, containers, fingertree, monad-extras, vector, split, splitmix, parallel, deepseq, directory, clock, ConfigFile, MissingH, intervals, hafar
  
executable crossval
  ghc-options:         -rtsopts -O2 -optlc-O3 -threaded -fllvm -msse4 
  hs-source-dirs:      src
  main-is:             CROSSVAL.hs
  other-modules:       IT, IT.Random, IT.Regression, IT.ITEA, IT.Mutation, IT.Algorithms, ITEA.Config, ITEA.Regression, IT.Knowledge, IT.Affine, IT.FI2POP, FI2POP.Config, FI2POP.Regression
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, mtl, mltool, hmatrix, containers, fingertree, monad-extras, vector, split, splitmix, parallel, deepseq, directory, clock, ConfigFile, MissingH, intervals, hafar
